--- a/about.html
+++ b/about.html
@@ -55,12 +55,12 @@
 
 <footer class="siteFooter">
   <div class="foot">
-    <div class="footRow footRowTop">
-      <div class="footCopy">© 2026 Capital Games</div>
-    </div>
-    <div class="footRow footRowBottom">
-      <div class="footNote">All purchases are completed through eBay for buyer protection.</div>
-      <div class="footSitemap">
+    <div class="footRow footRowMain">
+      <div class="footLeft">
+        <div class="footCopy">© 2026 Capital Games</div>
+        <div class="footNote">All purchases are completed through eBay for buyer protection.</div>
+      </div>
+      <div class="footRight">
         <div class="footSocial">
           <a class="socialBtn" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener noreferrer"><img class="socialIcon" src="./assets/icons/icon-ebay.svg" alt="" aria-hidden="true"/><span class="srOnly">eBay</span></a>
           <span class="socialBtn isDisabled" aria-disabled="true"><img class="socialIcon" src="./assets/icons/icon-x.svg" alt="" aria-hidden="true"/><span class="srOnly">X</span></span>
