--- a/about.html
+++ b/about.html
@@ -1,81 +1,101 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About | Capital Games</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>About | Capital Games</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&amp;display=swap" rel="stylesheet"/>
+<link href="./style.css" rel="stylesheet"/>
 </head>
-<body>
-<header>
-  <div class="topNav">
-    <a class="topNoticeLink" href="./shipping.html">U.S. buyers: We ship via eBay International Shipping (EIS) — click for details.</a>
-  </div>
-
-<div class="bar">
-    <div class="brand">
-      <img class="logoMain" src="./assets/CapitalGamesmain.png" alt="Capital Games">
-    </div>
-        <nav>
-      <a href="./index.html">Home</a>
-      <a href="./shop.html">Products</a>
-      <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay</a>
-      <a href="./about.html" aria-current="page">About</a>
-      <a href="./contact.html">Contact</a>
-    </nav>
+<body class="bgTexture" id="top"><header class="siteHeader">
+<div class="topNav">
+<a class="topNoticeLink" href="./shipping.html">U.S. buyers: We ship via eBay International Shipping (EIS) — click for details.</a>
+</div>
+<div class="headerWrap">
+<div class="bar headerBar headerBarWide">
+<div class="brand brandDark">
+<img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/>
+</div>
+<div class="headerSearch">
+<input aria-label="Search (placeholder)" placeholder="Search for games or collectibles…" type="search"/>
+<button aria-label="Search (placeholder)" class="searchBtn">
+<svg aria-hidden="true" height="18" viewbox="0 0 24 24" width="18">
+<path d="M10 4a6 6 0 104.472 10.01l3.259 3.258 1.414-1.414-3.258-3.259A6 6 0 0010 4zm0 2a4 4 0 110 8 4 4 0 010-8z" fill="currentColor"></path>
+</svg>
+</button>
+</div>
+<nav aria-label="Primary navigation" class="headerLinks">
+<a aria-current="page" href="./index.html">Home</a>
+<a href="./shop.html">Products</a>
+<a href="https://www.ebay.ca/usr/capitalgames" rel="noopener" target="_blank">eBay</a>
+<a href="./about.html">About</a>
+<a href="./contact.html">Contact</a>
+</nav>
+</div>
 </div>
 </header>
-
+<header>
+<div class="topNav">
+<a class="topNoticeLink" href="./shipping.html">U.S. buyers: We ship via eBay International Shipping (EIS) — click for details.</a>
+</div>
+<div class="bar">
+<div class="brand">
+<img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/>
+</div>
+<nav>
+<a href="./index.html">Home</a>
+<a href="./shop.html">Products</a>
+<a href="https://www.ebay.ca/usr/capitalgames" rel="noopener" target="_blank">eBay</a>
+<a aria-current="page" href="./about.html">About</a>
+<a href="./contact.html">Contact</a>
+</nav>
+</div>
+</header>
 <div class="container">
-  <h1 style="margin:0 0 10px;font-size:2.2rem;">About Capital Games</h1>
-  <p style="color:var(--muted);margin:0 0 18px;max-width:900px;">
+<h1 style="margin:0 0 10px;font-size:2.2rem;">About Capital Games</h1>
+<p style="color:var(--muted);margin:0 0 18px;max-width:900px;">
     Capital Games is a Canada-based seller focused on gaming and pop-culture collectibles—figures, model kits, construction sets, and nostalgia-driven releases.
     Every item is selected with condition, completeness, and collector appeal in mind.
   </p>
-
-  <div class="panel" style="max-width:900px;">
-    <h3 style="margin-top:0;">How we sell</h3>
-    <p style="margin:0 0 14px;">
+<div class="panel" style="max-width:900px;">
+<h3 style="margin-top:0;">How we sell</h3>
+<p style="margin:0 0 14px;">
       All purchases are completed through eBay for buyer protection. When you click a product, you’ll be directed to eBay to check out securely.
     </p>
-
-    <h3>What to expect</h3>
-    <ul style="margin:0;padding-left:18px;line-height:1.55;">
-      <li><strong>Accurate condition notes</strong> and clear photos</li>
-      <li><strong>Careful packing</strong> to protect collectibles in transit</li>
-      <li><strong>Worldwide shipping</strong> with trusted delivery options</li>
-    </ul>
-  </div>
-
-  <div style="margin-top:18px;">
-    <a class="heroBtn" href="./shop.html" style="display:inline-block;text-decoration:none;">Browse the Shop</a>
-  </div>
+<h3>What to expect</h3>
+<ul style="margin:0;padding-left:18px;line-height:1.55;">
+<li><strong>Accurate condition notes</strong> and clear photos</li>
+<li><strong>Careful packing</strong> to protect collectibles in transit</li>
+<li><strong>Worldwide shipping</strong> with trusted delivery options</li>
+</ul>
 </div>
-
+<div style="margin-top:18px;">
+<a class="heroBtn" href="./shop.html" style="display:inline-block;text-decoration:none;">Browse the Shop</a>
+</div>
+</div>
 <footer class="siteFooter">
-  <div class="foot">
-    <div class="footRow footRowMain">
-      <div class="footLeft">
-        <div class="footCopy">© 2026 Capital Games</div>
-        <div class="footNote">All purchases are completed through eBay for buyer protection.</div>
-      </div>
-      <div class="footRight">
-        <div class="footSocial">
-          <a class="socialBtn" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener noreferrer"><img class="socialIcon" src="./assets/icons/icon-ebay.svg" alt="" aria-hidden="true"/><span class="srOnly">eBay</span></a>
-          <span class="socialBtn isDisabled" aria-disabled="true"><img class="socialIcon" src="./assets/icons/icon-x.svg" alt="" aria-hidden="true"/><span class="srOnly">X</span></span>
-          <span class="socialBtn isDisabled" aria-disabled="true"><img class="socialIcon" src="./assets/icons/icon-instagram.svg" alt="" aria-hidden="true"/><span class="srOnly">Instagram</span></span>
-        </div>
-        <div class="footLinks">
-          <a href="./index.html#top">Home</a>
-          <a href="./shipping.html">Shipping</a>
-          <a href="./about.html">About</a>
-          <a href="./contact.html">Contact</a>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="foot">
+<div class="footRow footRowMain">
+<div class="footLeft">
+<div class="footCopy">© 2026 CapitalGames</div>
+<div class="footNote">All purchases are completed through eBay for buyer protection.</div>
+</div>
+<div class="footRight">
+<div class="footSocial">
+<a class="socialBtn" href="https://www.ebay.ca/usr/capitalgames" rel="noopener noreferrer" target="_blank"><img alt="" aria-hidden="true" class="socialIcon" src="./assets/icons/icon-ebay.svg"/><span class="srOnly">eBay</span></a>
+<span aria-disabled="true" class="socialBtn isDisabled"><img alt="" aria-hidden="true" class="socialIcon" src="./assets/icons/icon-x.svg"/><span class="srOnly">X</span></span>
+<span aria-disabled="true" class="socialBtn isDisabled"><img alt="" aria-hidden="true" class="socialIcon" src="./assets/icons/icon-instagram.svg"/><span class="srOnly">Instagram</span></span>
+</div>
+<div class="footLinks">
+<a href="#top">Home</a>
+<a href="./shipping.html">Shipping</a>
+<a href="./about.html">About</a>
+<a href="./contact.html">Contact</a>
+</div>
+</div>
+</div>
+</div>
 </footer>
-
 </body>
 </html>
