--- a/index.html
+++ b/index.html
@@ -1,128 +1,115 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Capital Games | Gaming Collectibles & Figures</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&family=Bebas+Neue&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Capital Games | Gaming Collectibles &amp; Figures</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&amp;family=Bebas+Neue&amp;display=swap" rel="stylesheet"/>
+<link href="./style.css" rel="stylesheet"/>
 </head>
-<body class="bgTexture"  id="top">
-
+<body class="bgTexture" id="top">
 <header class="siteHeader">
-  <div class="topNav">
-    <a class="topNoticeLink" href="./shipping.html">U.S. buyers: We ship via eBay International Shipping (EIS) — click for details.</a>
-  </div>
-
-  <div class="headerWrap">
+<div class="topNav">
+<a class="topNoticeLink" href="./shipping.html">U.S. buyers: We ship via eBay International Shipping (EIS) — click for details.</a>
+</div>
+<div class="headerWrap">
 <div class="bar headerBar headerBarWide">
-    <div class="brand brandDark">
-      <img class="logoMain" src="./assets/CapitalGamesmain.png" alt="Capital Games">
-    </div>
-
-    <div class="headerSearch">
-      <input type="search" placeholder="Search for games or collectibles…" aria-label="Search (placeholder)" />
-      <button class="searchBtn" aria-label="Search (placeholder)">
-        <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true">
-          <path fill="currentColor" d="M10 4a6 6 0 104.472 10.01l3.259 3.258 1.414-1.414-3.258-3.259A6 6 0 0010 4zm0 2a4 4 0 110 8 4 4 0 010-8z"/>
-        </svg>
-      </button>
-    </div>
-<nav class="headerLinks" aria-label="Primary navigation">
-  <a href="./index.html" aria-current="page">Home</a>
-  <a href="./shop.html">Products</a>
-  <a href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener">eBay</a>
-  <a href="./about.html">About</a>
-  <a href="./contact.html">Contact</a>
+<div class="brand brandDark">
+<img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/>
+</div>
+<div class="headerSearch">
+<input aria-label="Search (placeholder)" placeholder="Search for games or collectibles…" type="search"/>
+<button aria-label="Search (placeholder)" class="searchBtn">
+<svg aria-hidden="true" height="18" viewbox="0 0 24 24" width="18">
+<path d="M10 4a6 6 0 104.472 10.01l3.259 3.258 1.414-1.414-3.258-3.259A6 6 0 0010 4zm0 2a4 4 0 110 8 4 4 0 010-8z" fill="currentColor"></path>
+</svg>
+</button>
+</div>
+<nav aria-label="Primary navigation" class="headerLinks">
+<a aria-current="page" href="./index.html">Home</a>
+<a href="./shop.html">Products</a>
+<a href="https://www.ebay.ca/usr/capitalgames" rel="noopener" target="_blank">eBay</a>
+<a href="./about.html">About</a>
+<a href="./contact.html">Contact</a>
 </nav>
 </div>
-  </div>
+</div>
 </header>
-
 <section class="heroMock">
-  <div class="heroInner">
-    <div class="heroCopy">
-      <div class="heroKicker">PREMIUM GAMING</div>
-      <h1>COLLECTIBLES &amp; FIGURES</h1>
-      <p>Curated figures, model kits, and gaming collectibles.<br>
+<div class="heroInner">
+<div class="heroCopy">
+<div class="heroKicker">PREMIUM GAMING</div>
+<h1>COLLECTIBLES &amp; FIGURES</h1>
+<p>Curated figures, model kits, and gaming collectibles.<br/>
          All purchases are completed securely through eBay.</p>
-      <a class="heroBtn" href="./shop.html">Shop Now</a>
-    </div>
+<a class="heroBtn" href="./shop.html">Shop Now</a>
+</div>
+</div>
 
-    </div>
-  </div>
 </section>
-
 <section class="homeSection">
-  <h2 class="sectionHeading"><span class="line"></span> Featured Products <span class="line"></span></h2>
-  <div id="featuredGrid" class="grid featuredGrid"></div>
+<h2 class="sectionHeading"><span class="line"></span> Featured Products <span class="line"></span></h2>
+<div class="grid featuredGrid" id="featuredGrid"></div>
 </section>
-
 <section class="homeSection">
-  <h2 class="sectionHeading"><span class="line"></span> Shop with Confidence <span class="line"></span></h2>
-
-  <div class="categoryGrid">
-    <a class="catCard" href="./shop.html" aria-label="Curated for Collectors - Shop">
-      <div class="catIcon" aria-hidden="true">
-        <svg viewBox="0 0 24 24" width="26" height="26"><path fill="currentColor" d="M12 2l2.9 6.1 6.7.9-4.9 4.7 1.2 6.6L12 17.9 6.1 20.3l1.2-6.6L2.4 9l6.7-.9L12 2z"/></svg>
-      </div>
-      <div class="catTitle">Curated for Collectors</div>
-      <div class="catSub">Hand-picked items chosen for quality, condition, and collector appeal.</div>
-    </a>
-
-    <a class="catCard" href="./shop.html" aria-label="Gaming & Pop-Culture Collectibles - Shop">
-      <div class="catIcon" aria-hidden="true">
-        <svg viewBox="0 0 24 24" width="26" height="26"><path fill="currentColor" d="M7 9h10a4 4 0 014 4v3a2 2 0 01-2 2h-2l-1 2h-2l-1-2H11l-1 2H8l-1-2H5a2 2 0 01-2-2v-3a4 4 0 014-4zm2 3a1 1 0 100 2 1 1 0 000-2zm6 0h2v2h-2v-2z"/></svg>
-      </div>
-      <div class="catTitle">Gaming &amp; Pop-Culture Collectibles</div>
-      <div class="catSub">Action figures, model kits, construction sets, and nostalgia-driven releases.</div>
-    </a>
-
-    <a class="catCard" href="./about.html" aria-label="Proudly Canadian - About">
-      <div class="catIcon" aria-hidden="true">
-        <svg viewBox="0 0 24 24" width="26" height="26"><path fill="currentColor" d="M12 2c-2.8 1.8-5.6 3-9 3v8c0 5 4.4 8.4 9 9 4.6-.6 9-4 9-9V5c-3.4 0-6.2-1.2-9-3zm0 6.2l1.2 2.1 2.4-.5-1.6 1.8 1.6 1.8-2.4-.5L12 15l-1.2-2.3-2.4.5 1.6-1.8-1.6-1.8 2.4.5L12 8.2z"/></svg>
-      </div>
-      <div class="catTitle">Proudly Canadian</div>
-      <div class="catSub">Canada-based seller shipping worldwide with trusted delivery.</div>
-    </a>
-
-    <a class="catCard" href="./shipping.html" aria-label="Fast, Reliable Shipping - Shipping">
-      <div class="catIcon" aria-hidden="true">
-        <svg viewBox="0 0 24 24" width="26" height="26"><path fill="currentColor" d="M20 8h-3V4H3v12h2a3 3 0 006 0h6a3 3 0 006 0h1v-5l-4-3zm-5-2v2H5V6h10zm-7 12a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm12 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm2-4h-.5a3 3 0 00-5 0H11a3 3 0 00-6 0H5v-3h10V9h3l4 3v2z"/></svg>
-      </div>
-      <div class="catTitle">Fast, Reliable Shipping</div>
-      <div class="catSub">Carefully packed, quickly shipped, always protected.</div>
-    </a>
-  </div>
+<h2 class="sectionHeading"><span class="line"></span> Shop with Confidence <span class="line"></span></h2>
+<div class="categoryGrid">
+<a aria-label="Curated for Collectors - Shop" class="catCard" href="./shop.html">
+<div aria-hidden="true" class="catIcon">
+<svg height="26" viewbox="0 0 24 24" width="26"><path d="M12 2l2.9 6.1 6.7.9-4.9 4.7 1.2 6.6L12 17.9 6.1 20.3l1.2-6.6L2.4 9l6.7-.9L12 2z" fill="currentColor"></path></svg>
+</div>
+<div class="catTitle">Curated for Collectors</div>
+<div class="catSub">Hand-picked items chosen for quality, condition, and collector appeal.</div>
+</a>
+<a aria-label="Gaming &amp; Pop-Culture Collectibles - Shop" class="catCard" href="./shop.html">
+<div aria-hidden="true" class="catIcon">
+<svg height="26" viewbox="0 0 24 24" width="26"><path d="M7 9h10a4 4 0 014 4v3a2 2 0 01-2 2h-2l-1 2h-2l-1-2H11l-1 2H8l-1-2H5a2 2 0 01-2-2v-3a4 4 0 014-4zm2 3a1 1 0 100 2 1 1 0 000-2zm6 0h2v2h-2v-2z" fill="currentColor"></path></svg>
+</div>
+<div class="catTitle">Gaming &amp; Pop-Culture Collectibles</div>
+<div class="catSub">Action figures, model kits, construction sets, and nostalgia-driven releases.</div>
+</a>
+<a aria-label="Proudly Canadian - About" class="catCard" href="./about.html">
+<div aria-hidden="true" class="catIcon">
+<svg height="26" viewbox="0 0 24 24" width="26"><path d="M12 2c-2.8 1.8-5.6 3-9 3v8c0 5 4.4 8.4 9 9 4.6-.6 9-4 9-9V5c-3.4 0-6.2-1.2-9-3zm0 6.2l1.2 2.1 2.4-.5-1.6 1.8 1.6 1.8-2.4-.5L12 15l-1.2-2.3-2.4.5 1.6-1.8-1.6-1.8 2.4.5L12 8.2z" fill="currentColor"></path></svg>
+</div>
+<div class="catTitle">Proudly Canadian</div>
+<div class="catSub">Canada-based seller shipping worldwide with trusted delivery.</div>
+</a>
+<a aria-label="Fast, Reliable Shipping - Shipping" class="catCard" href="./shipping.html">
+<div aria-hidden="true" class="catIcon">
+<svg height="26" viewbox="0 0 24 24" width="26"><path d="M20 8h-3V4H3v12h2a3 3 0 006 0h6a3 3 0 006 0h1v-5l-4-3zm-5-2v2H5V6h10zm-7 12a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm12 0a1.5 1.5 0 110-3 1.5 1.5 0 010 3zm2-4h-.5a3 3 0 00-5 0H11a3 3 0 00-6 0H5v-3h10V9h3l4 3v2z" fill="currentColor"></path></svg>
+</div>
+<div class="catTitle">Fast, Reliable Shipping</div>
+<div class="catSub">Carefully packed, quickly shipped, always protected.</div>
+</a>
+</div>
 </section>
-
 <footer class="siteFooter">
-  <div class="foot">
-    <div class="footRow footRowMain">
-      <div class="footLeft">
-        <div class="footCopy">© 2026 Capital Games</div>
-        <div class="footNote">All purchases are completed through eBay for buyer protection.</div>
-      </div>
-      <div class="footRight">
-        <div class="footSocial">
-          <a class="socialBtn" href="https://www.ebay.ca/usr/capitalgames" target="_blank" rel="noopener noreferrer"><img class="socialIcon" src="./assets/icons/icon-ebay.svg" alt="" aria-hidden="true"/><span class="srOnly">eBay</span></a>
-          <span class="socialBtn isDisabled" aria-disabled="true"><img class="socialIcon" src="./assets/icons/icon-x.svg" alt="" aria-hidden="true"/><span class="srOnly">X</span></span>
-          <span class="socialBtn isDisabled" aria-disabled="true"><img class="socialIcon" src="./assets/icons/icon-instagram.svg" alt="" aria-hidden="true"/><span class="srOnly">Instagram</span></span>
-        </div>
-        <div class="footLinks">
-          <a href="#top">Home</a>
-          <a href="./shipping.html">Shipping</a>
-          <a href="./about.html">About</a>
-          <a href="./contact.html">Contact</a>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="foot">
+<div class="footRow footRowMain">
+<div class="footLeft">
+<div class="footCopy">© 2026 CapitalGames</div>
+<div class="footNote">All purchases are completed through eBay for buyer protection.</div>
+</div>
+<div class="footRight">
+<div class="footSocial">
+<a class="socialBtn" href="https://www.ebay.ca/usr/capitalgames" rel="noopener noreferrer" target="_blank"><img alt="" aria-hidden="true" class="socialIcon" src="./assets/icons/icon-ebay.svg"><span class="srOnly">eBay</span></img></a>
+<span aria-disabled="true" class="socialBtn isDisabled"><img alt="" aria-hidden="true" class="socialIcon" src="./assets/icons/icon-x.svg"/><span class="srOnly">X</span></span>
+<span aria-disabled="true" class="socialBtn isDisabled"><img alt="" aria-hidden="true" class="socialIcon" src="./assets/icons/icon-instagram.svg"/><span class="srOnly">Instagram</span></span>
+</div>
+<div class="footLinks">
+<a href="#top">Home</a>
+<a href="./shipping.html">Shipping</a>
+<a href="./about.html">About</a>
+<a href="./contact.html">Contact</a>
+</div>
+</div>
+</div>
+</div>
 </footer>
-
-  <script src="products.js"></script>
-  <script src="app.js"></script>
-
+<script src="products.js"></script>
+<script src="app.js"></script>
 <script>CG_renderFeatured();</script>
 </body>
 </html>
