--- a/shop.html
+++ b/shop.html
@@ -35,28 +35,11 @@
 </div>
 </div>
 </header>
-<header>
-<div class="topNav">
-<a class="topNoticeLink" href="./shipping.html">U.S. buyers: We ship via eBay International Shipping (EIS) — click for details.</a>
-</div>
-<div class="bar">
-<div class="brand">
-<img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/>
-</div>
-<nav>
-<a href="./index.html">Home</a>
-<a aria-current="page" href="./shop.html">Products</a>
-<a href="https://www.ebay.ca/usr/capitalgames" rel="noopener" target="_blank">eBay</a>
-<a href="./about.html">About</a>
-<a href="./contact.html">Contact</a>
-</nav>
-</div>
-</header>
 <div class="container">
-<h1 style="margin:0 0 8px;font-size:2.2rem;">Shop</h1>
-<p style="color:var(--muted);margin:0 0 18px;max-width:860px;">
-    Click a <strong>Category</strong> to filter. Themes appear directly underneath. Click a <strong>Theme</strong> to filter further, then choose a <strong>Type</strong>.
-  </p>
+<div class="pageHeaderCard">
+  <h1 class="pageTitle">Shop</h1>
+  <p class="pageSubtitle">Click a <strong>Category</strong> to filter. Themes appear directly underneath. Click a <strong>Theme</strong> to filter further, then choose a <strong>Type</strong>.</p>
+</div>
 <div class="layout">
 <aside class="panel">
 <h3>Browse</h3>
