--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </div>
 
 </section>
-<section class="homeSection">
+<section class="homeSection featuredSection">
 <h2 class="sectionHeading"><span class="line"></span> Featured Products <span class="line"></span></h2>
 <div class="grid featuredGrid" id="featuredGrid"></div>
 </section>
