--- a/shop.html
+++ b/shop.html
@@ -58,9 +58,17 @@
 <option value="za">Sort: Z–A</option>
 <option value="featured">Sort: Featured First</option>
 </select>
+<select id="perPage" aria-label="Items per page">
+<option value="all">Show: All</option>
+<option value="10">Show: 10</option>
+<option value="25">Show: 25</option>
+<option value="50">Show: 50</option>
+<option value="100">Show: 100</option>
+</select>
 </div>
 <div class="count" id="resultCount"></div>
 <div class="grid" id="shopGrid"></div>
+<div class="pagination" id="pagination" aria-label="Pagination"></div>
 </main>
 </div>
 </div>
