--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&amp;display=swap" rel="stylesheet"/>
 <link href="./style.css" rel="stylesheet"/>
 </head>
-<body class="bgTexture" id="top"><header class="siteHeader">
+<body class="bgTexture shopWrap" id="top"><header class="siteHeader">
 <div class="topNav">
 <a class="topNoticeLink" href="./shipping.html">U.S. buyers: We ship via eBay International Shipping (EIS) — click for details.</a>
 </div>
