--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 <div class="brand brandDark">
 <img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/>
 </div>
-<div class="headerSearch">
-<input aria-label="Search (placeholder)" placeholder="Search for games or collectibles…" type="search"/>
-<button aria-label="Search (placeholder)" class="searchBtn">
+<div class="headerSearch cg-headerSearch">
+<input aria-label="Search (placeholder)" placeholder="Search for games or collectibles…" type="search"/ class="cg-headerSearchInput">
+<button aria-label="Search (placeholder)" class="searchBtn cg-headerSearchBtn">
 <svg aria-hidden="true" height="18" viewbox="0 0 24 24" width="18">
 <path d="M10 4a6 6 0 104.472 10.01l3.259 3.258 1.414-1.414-3.258-3.259A6 6 0 0010 4zm0 2a4 4 0 110 8 4 4 0 010-8z" fill="currentColor"></path>
 </svg>
 </button>
 </div>
-<nav aria-label="Primary navigation" class="headerLinks">
+      <nav aria-label="Primary navigation" class="headerLinks">
 <a aria-current="page" href="./index.html">Home</a>
 <a href="./shop.html">Products</a>
 <a href="https://www.ebay.ca/usr/capitalgames" rel="noopener" target="_blank">eBay</a>
