--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <div class="headerWrap">
 <div class="bar headerBar headerBarWide">
 <div class="brand brandDark">
-<img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/>
+  <a href="./index.html" aria-label="Go to homepage">
+    <img src="./assets/CapitalGamesmain.png" alt="Capital Games" class="logoMain">
+  </a>
 </div>
 <div class="headerSearch cg-headerSearch">
 <input aria-label="Search (placeholder)" placeholder="Search for games or collectibles…" type="search"/ class="cg-headerSearchInput">
