--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
 <div class="headerWrap">
 <div class="bar headerBar headerBarWide">
 <div class="brand brandDark">
-<img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/>
+  <a href="./index.html" aria-label="Go to homepage">
+    <img src="./assets/CapitalGamesmain.png" alt="Capital Games" class="logoMain">
+  </a>
 </div>
 <div class="headerSearch cg-headerSearch">
   <input
