--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,7 @@
 <div class="headerWrap">
 <div class="bar headerBar headerBarWide">
 <div class="brand brandDark">
-  <a href="./index.html" aria-label="Go to homepage">
-    <img src="./assets/CapitalGamesmain.png" alt="Capital Games" class="logoMain">
-  </a>
+<a href="./index.html" aria-label="Go to homepage"><img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/></a>
 </div>
 <div class="headerSearch cg-headerSearch">
   <input
@@ -32,7 +30,7 @@
     …
   </button>
 </div>
-      <nav aria-label="Primary navigation" class="headerLinks">
+<nav aria-label="Primary navigation" class="headerLinks">
 <a aria-current="page" href="./index.html">Home</a>
 <a href="./shop.html">Products</a>
 <a href="https://www.ebay.ca/usr/capitalgames" rel="noopener" target="_blank">eBay</a>
@@ -80,8 +78,5 @@
 </div>
 </div>
 </footer>
-  <script src="products.js"></script>
-  <script src="app.js"></script>
-
 </body>
 </html>
