--- a/about.html
+++ b/about.html
@@ -36,12 +36,17 @@
 </div>
 </header>
 <div class="container">
+<div class="panel" style="max-width:900px;">
 <h1 style="margin:0 0 10px;font-size:2.2rem;">About Capital Games</h1>
 <p style="color:var(--muted);margin:0 0 18px;max-width:900px;">
     Capital Games is a Canada-based seller focused on gaming and pop-culture collectibles—figures, model kits, construction sets, and nostalgia-driven releases.
     Every item is selected with condition, completeness, and collector appeal in mind.
   </p>
-<div class="panel" style="max-width:900px;">
+<h3 style="margin-top:0;">How we sell</h3>
+<p style="margin:0 0 14px;">
+      All purchases are completed through eBay for buyer protection. When you click a product, you’ll be directed to eBay to check out securely.
+    </p>
+<h3>What to expect</h3>    
 <h3 style="margin-top:0;">How we sell</h3>
 <p style="margin:0 0 14px;">
       All purchases are completed through eBay for buyer protection. When you click a product, you’ll be directed to eBay to check out securely.
