--- a/about.html
+++ b/about.html
@@ -38,8 +38,8 @@
 <div class="container">
 <div class="panel" style="max-width:900px;">
 <h1 style="margin:0 0 10px;font-size:2.2rem;">About Capital Games</h1>
-<p style="color:var(--muted);margin:0 0 18px;max-width:900px;">
-    Capital Games is a Canada-based seller focused on gaming and pop-culture collectibles—figures, model kits, construction sets, and nostalgia-driven releases.
+<p style="margin:0 0 18px;max-width:900px;">
+    Started in 2003, Capital Games is a Canada-based seller focused on gaming and pop-culture collectibles—figures, model kits, construction sets, and nostalgia-driven releases.
     Every item is selected with condition, completeness, and collector appeal in mind.
   </p>
 <h3 style="margin-top:0;">How we sell</h3>
