--- a/about.html
+++ b/about.html
@@ -62,6 +62,27 @@
 <a class="heroBtn" href="./shop.html" style="display:inline-block;text-decoration:none;">Browse the Shop</a>
 </div>
 </div>
+
+<section class="homeSection">
+  <h2 class="sectionHeading">
+    <span class="line"></span>
+    Shop with Confidence
+    <span class="line"></span>
+  </h2>
+
+  <div class="categoryGrid">
+    <div class="catCard">
+      <div class="catIcon">…</div>
+      <div class="catTitle">…</div>
+      <div class="catSub">…</div>
+    </div>
+
+    <div class="catCard">…</div>
+    <div class="catCard">…</div>
+    <div class="catCard">…</div>
+  </div>
+</section>
+    
 <footer class="siteFooter">
 <div class="foot">
 <div class="footRow footRowMain">
