--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>About | Capital Games</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&amp;display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&amp;family=Bebas+Neue&amp;display=swap" rel="stylesheet"/>
 <link href="./style.css" rel="stylesheet"/>
 </head>
 <body class="bgTexture" id="top"><header class="siteHeader">
