--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
 <div class="container">
 <div class="panel" style="max-width:900px;">
 <h1 style="margin:0 0 10px;font-size:2.2rem;">Contact</h1>
-<p style="color:var(--muted);margin:0 0 18px;max-width:900px;">
+<p style="margin:0 0 18px;max-width:900px;">
     For the fastest response, please contact us through eBay messages on any listing.
   </p>
   <h3 style="margin-top:0;">Message us on eBay</h3>
