--- a/shipping.html
+++ b/shipping.html
@@ -36,21 +36,21 @@
 </div>
 </header>
 <div class="container">
-<h1 style="margin:0 0 10px;font-size:2.2rem;">Shipping</h1>
-<p style="color:var(--muted);margin:0 0 18px;max-width:900px;">
+<div class="panel" style="max-width:900px;">
+    <h1 style="margin:0 0 10px;font-size:2.2rem;">Shipping</h1>
+<p style="margin:0 0 18px;max-width:900px;">
     We’re based in Canada and ship worldwide. Every order is carefully packed and protected.
     Final shipping costs, services, and delivery estimates are shown on eBay at checkout.
   </p>
-<div class="panel" style="max-width:900px;">
 <h3 style="margin-top:0;">Handling time</h3>
-<p style="margin:0 0 14px;">Most orders ship quickly once payment is confirmed. When applicable, tracking is provided through eBay.</p>
+<p style="margin:0 0 14px;">We strive to have a turn around time of one business day after confirmation of payment. Tracking and insurance are provided on all order to ensure your items arrive on time and safely.</p>
 <h3>Packaging</h3>
-<p style="margin:0 0 14px;">Collectibles are packed with care (protective materials + sturdy boxes) to help ensure they arrive safely.</p>
+<p style="margin:0 0 14px;">We pack all of out items with care (protective materials + sturdy boxes) to help ensure they arrive safely.</p>
 <h3>Canada, U.S., and International</h3>
 <ul style="margin:0;padding-left:18px;line-height:1.55;">
-<li><strong>Canada:</strong> Great domestic options with reliable delivery.</li>
-<li><strong>U.S. &amp; International:</strong> Shipping is handled through eBay checkout (often via eBay’s international program when available).</li>
-<li><strong>Import fees:</strong> Any duties/taxes are determined by the destination country and are typically collected by the shipping provider/eBay at checkout, when applicable.</li>
+<li><strong>Canada:</strong> We offer various domestic shipping options through Canada Post to ensure reliable and timely delivery.</li>
+<li><strong>U.S. &amp; International:</strong> Shipping is handled through eBay checkout (often via eBay’s international program when available and Canada Post for all other options). For US-based customers specifically, please note that due to tariffs and complications at customs, we are still shipping through the eBay International Shipping program ONLY at this time. We will open additional shipping options again as soon as we are able to offer an easy process for handling any duties and tariffs.</li>
+<li><strong>Import fees:</strong> Any duties/taxes are determined by the destination country and are typically collected by the shipping provider/eBay at checkout, when applicable. Capital Games is not responsible for any duties, tariffs or taxes charged to you at the time of checkout or at delivery.</li>
 </ul>
 </div>
 <div style="margin-top:18px;">
