--- a/shipping.html
+++ b/shipping.html
@@ -49,7 +49,8 @@
 <h3>Canada, U.S., and International</h3>
 <ul style="margin:0;padding-left:18px;line-height:1.55;">
 <li><strong>Canada:</strong> We offer various domestic shipping options through Canada Post to ensure reliable and timely delivery.</li>
-<li><strong>U.S. &amp; International:</strong> Shipping is handled through eBay checkout (often via eBay’s international program when available and Canada Post for all other options). For US-based customers specifically, please note that due to tariffs and complications at customs, we are still shipping through the eBay International Shipping program ONLY at this time. We will open additional shipping options again as soon as we are able to offer an easy process for handling any duties and tariffs.</li>
+<li><strong>International:</strong> Shipping is handled at checkout and you will have options for both Canada Post and the eBay International Shipping (EIS) program at your convenience. </li>
+<li><strong>Note For US Customers:</strong> For US-based customers specifically, we apologize for the limited options in shipping at this time. Please note that due to tariffs and complications at customs, we are still shipping through the eBay International Shipping Program (EIS) ONLY at this time. We will open additional shipping options again as soon as we are able to offer an easy process for handling any duties and tariffs.</li>
 <li><strong>Import fees:</strong> Any duties/taxes are determined by the destination country and are typically collected by the shipping provider/eBay at checkout, when applicable. Capital Games is not responsible for any duties, tariffs or taxes charged to you at the time of checkout or at delivery.</li>
 </ul>
 </div>
