--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 </div>
 </header>
 <div class="container">
-<div class="panel" style="max-width:900px;">
+<div class="panel" style="max-width:900px;margin:0 auto;">
 <h1 style="margin:0 0 10px;font-size:2.2rem;">About Capital Games</h1>
 <p style="margin:0 0 18px;max-width:900px;">
     Started in 2003, Capital Games is a Canada-based seller focused on gaming and pop-culture collectibles—figures, model kits, construction sets, and nostalgia-driven releases.
