--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,12 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Contact | Capital Games</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&family=Bebas+Neue&display=swap" rel="stylesheet"/>
+<title>Capital Games | Gaming Collectibles &amp; Figures</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800;900&amp;family=Bebas+Neue&amp;display=swap" rel="stylesheet"/>
 <link href="./style.css" rel="stylesheet"/>
 </head>
-<body class="bgTexture" id="top"><header class="siteHeader">
+<body class="bgTexture" id="top">
+<header class="siteHeader">
 <div class="topNav">
 <a class="topNoticeLink" href="./shipping.html">U.S. buyers: We ship via eBay International Shipping (EIS) — click for details.</a>
 </div>
@@ -17,18 +18,13 @@
 <div class="brand brandDark">
 <a href="./index.html" aria-label="Go to homepage"><img alt="Capital Games" class="logoMain" src="./assets/CapitalGamesmain.png"/></a>
 </div>
-<div class="headerSearch cg-headerSearch">
-  <input
-    class="cg-headerSearchInput"
-    aria-label="Search products"
-    placeholder="Search for games or collectibles…"
-    type="search"
-    autocomplete="off"
-  />
-  <button aria-label="Search" class="searchBtn cg-headerSearchBtn" type="button">
-    <!-- keep your SVG -->
-    …
-  </button>
+<div class="headerSearch">
+<input aria-label="Search (placeholder)" placeholder="Search for games or collectibles…" type="search"/>
+<button aria-label="Search (placeholder)" class="searchBtn">
+<svg aria-hidden="true" height="18" viewbox="0 0 24 24" width="18">
+<path d="M10 4a6 6 0 104.472 10.01l3.259 3.258 1.414-1.414-3.258-3.259A6 6 0 0010 4zm0 2a4 4 0 110 8 4 4 0 010-8z" fill="currentColor"></path>
+</svg>
+</button>
 </div>
 <nav aria-label="Primary navigation" class="headerLinks">
 <a aria-current="page" href="./index.html">Home</a>
